--- a/src/stylesheets/About.module.scss
+++ b/src/stylesheets/About.module.scss
@@ -1,4 +1,7 @@
 .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-height: 100vh;
     width: 100vw;
     background-color: black;
