--- a/src/stylesheets/NavBar.module.scss
+++ b/src/stylesheets/NavBar.module.scss
@@ -1,24 +1,82 @@
-.navBar {
+.navBarContainer {
     position: fixed;
+    top: 0px;
     width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 80px;
     padding: 0px 50px;
-    background-color: rgba(255,255,255, 0.02);
-  
-    .items {
-        background-color: red;
-        line-height: 36px;
+    backdrop-filter: blur(4px);
+    background-color: rgba(0,0,0, 0.8);
+    box-shadow: 0 1px 1px 1px rgba(255,255,255, 0.07);
+    transition: .5s;
+    .navBarLogo {
+        img {
+            transition: .3s;
+        }
+        &:hover {
+            img {
+                opacity: 0.6
+            }
+        }
     }
-    
 }
 
-// .logo {
-//     background-color: red;
-//     // height: 2vh;
-//     img {
-//         width: 10vh;
-//     }
-// }
+.navBarInvisible {
+    top: -80px;
+}
+
+
+
+
+
+@media screen and (max-width: 768px) {
+.navBarContainer {
+    padding: 0px 35px;
+    height: 60px;
+    .navBarLogo {
+        a {
+            img {
+                height: 40px;
+            }
+        }
+    }
+    .navBarItems {
+        position: absolute;
+        width: 190px;
+        right: -190px;
+        top: 0px;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(25, 25, 25);
+        transition: .2s;
+    }
+    .active {
+        right: 0;
+            }
+    }
+    .navBarInvisible {
+        top: -60px;
+    }
+
+}
+
+    
+@media screen and (max-width: 480px) {
+    .navBarContainer {
+        .navBarItems {
+            width: 170px;
+            right: -170px;
+            transition: .2s;
+    }
+        .active {
+            right: 0
+        }
+}
+}
+
+
